findUnsignedIntegerInString improved